--- a/src/app/sheet/sheet.component.html
+++ b/src/app/sheet/sheet.component.html
@@ -1,3 +1,7 @@
+<section class="buttons">
+  <button mat-raised-button color="primary" (click)="openDialog()">Clear All</button>
+</section>
+
 <mat-accordion multi>
   <mat-expansion-panel [expanded]="true">
     <mat-expansion-panel-header>
