--- a/src/app/sheet/sheet.component.html
+++ b/src/app/sheet/sheet.component.html
@@ -1,5 +1,7 @@
 <section class="buttons">
-  <button mat-raised-button color="primary" (click)="openDialog()">Clear All</button>
+  <button mat-raised-button color="primary" (click)="openResetDialog()">Clear All</button>
+
+  <button mat-raised-button color="primary" (click)="openDiceRollerDialog()">Roll Dices</button>
 </section>
 
 <mat-accordion multi>
