--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar  color="primary">
-  <span>{{title}}</span>
+  <span translate>app.title</span>
   <span class="example-spacer"></span>
 
   <!-- <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Menu">
