--- a/src/app/dice-roller-dialog/dice-roller-dialog.component.html
+++ b/src/app/dice-roller-dialog/dice-roller-dialog.component.html
@@ -1,4 +1,6 @@
-<h2 mat-dialog-title>Dice Roller</h2>
+<h2 mat-dialog-title>
+  <span translate>dice-roller.title</span>
+</h2>
 
 <mat-dialog-content class="mat-typography">
   <p>{{dice1}}</p>
