--- a/src/app/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/confirmation-dialog/confirmation-dialog.component.html
@@ -1,11 +1,19 @@
-<h2 mat-dialog-title>Clear All</h2>
+<h2 mat-dialog-title>
+  <span translate>confirmation-dialog.title</span>
+</h2>
 
 <mat-dialog-content class="mat-typography">
-  <h3>Are you sure?</h3>
-  <p>If you proceed, all options will be cleared</p>
+  <h3>
+    <span translate>confirmation-dialog.are-you-sure</span>
+  </h3>
+  <p translate>confirmation-dialog.confirmation-text</p>
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>I am sure!</button>
+  <button mat-button mat-dialog-close>
+    <span translate>confirmation-dialog.cancel</span>
+  </button>
+  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>
+    <span translate>confirmation-dialog.confirm</span>
+  </button>
 </mat-dialog-actions>
