--- a/src/app/sheet/sheet.component.html
+++ b/src/app/sheet/sheet.component.html
@@ -1,14 +1,20 @@
 <section class="buttons">
-  <button mat-raised-button color="primary" (click)="openResetDialog()">Clear All</button>
+  <button mat-raised-button color="primary" (click)="openResetDialog()">
+    <span translate>app.clear-all</span>
+  </button>
 
-  <button mat-raised-button color="primary" (click)="openDiceRollerDialog()">Roll Dices</button>
+  <button mat-raised-button color="primary" (click)="openDiceRollerDialog()">
+    <span translate>app.roll-dice</span>
+  </button>
 </section>
 
 <mat-accordion multi>
   <mat-expansion-panel [expanded]="true">
     <mat-expansion-panel-header>
       <mat-panel-title>
-        Suspect
+        <span translate>
+          app.suspect
+        </span>
       </mat-panel-title>
       <mat-panel-description>
         {{suspect.name}}
@@ -25,7 +31,9 @@
   <mat-expansion-panel [expanded]="true">
     <mat-expansion-panel-header>
       <mat-panel-title>
-        Weapon
+        <span translate>
+          app.weapon
+        </span>
       </mat-panel-title>
       <mat-panel-description>
         {{weapon.name}}
@@ -42,7 +50,9 @@
   <mat-expansion-panel [expanded]="true">
     <mat-expansion-panel-header>
       <mat-panel-title>
-        Room
+        <span translate>
+          app.room
+        </span>
       </mat-panel-title>
       <mat-panel-description>
         {{room.name}}
