--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,6 +7,14 @@
   }
 }
 
+.language-label {
+  margin-right: 10px;
+}
+
+.toolbar-spacer {
+  flex: 1 1 auto;
+}
+
 footer {
   position: fixed;
   bottom: 0;
