--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,16 @@
-<mat-toolbar  color="primary">
+<mat-toolbar color="primary">
   <span translate>app.title</span>
-  <span class="example-spacer"></span>
+  <span class="toolbar-spacer"></span>
 
-  <!-- <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Menu">
-    <mat-icon>more_vert</mat-icon>
-  </button>
-  <mat-menu #menu="matMenu">
-    <button mat-menu-item aria-label="Add Album" [routerLink]="['/albums/new']">
-      <mat-icon>add</mat-icon>
-      <span>Add Album</span>
-    </button>
-  </mat-menu> -->
+  <span class="language-label" translate>app.language</span>
+
+  <span>
+      <select [(ngModel)]="language" name="language" (change)="changeLanguage()">
+        <option *ngFor="let language of languages" [value]="language.code">
+          {{ language.name }}
+        </option>
+      </select>
+  </span>
 </mat-toolbar>
 
 <div class="app-content">
