update angular from 16 to 17

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,5 +18,5 @@
 </div>
 
 <footer>
-  By <a href="https://github.com/rodrigovdb">@rodrigovdb</a>
+  By <a href="https://github.com/rodrigovdb">&#64;rodrigovdb</a>
 </footer>
