--- a/src/app/guess/guess.component.html
+++ b/src/app/guess/guess.component.html
@@ -9,7 +9,7 @@
 </section>
 
 <mat-accordion multi>
-  <app-pannel [items]="suspects$ | async" [selected]="suspect" title="app.suspect"></app-pannel>
-  <app-pannel [items]="weapons$ | async" [selected]="weapon" title="app.weapon"></app-pannel>
-  <app-pannel [items]="rooms$ | async" [selected]="room" title="app.room"></app-pannel>
+  <app-pannel entityType="suspects" title="app.suspect"></app-pannel>
+  <app-pannel entityType="weapons" title="app.weapon"></app-pannel>
+  <app-pannel entityType="rooms" title="app.room"></app-pannel>
 </mat-accordion>
