initialize items for the very first time with no errors

--- a/src/app/components/pannel/pannel.component.html
+++ b/src/app/components/pannel/pannel.component.html
@@ -16,7 +16,7 @@
         *ngFor="let item of items"
         [item]="item"
         [entityType]="entityType"
-        (clickedItem)="onClickItem($event)"
+        (clickedItem)="onClickItem()"
       ></app-entity-row>
     </ng-container>
   </section>
